Fixed bug with margins on mobile devices

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -337,6 +337,24 @@ body {
         }
       }
     }
+    .load-more-button {
+      height: 45px;
+      padding: 0 30px;
+      background: none;
+      border: 3px solid #5ed98f;
+      border-radius: 6px;
+      color: #5ed98f;
+      font-weight: 500;
+      font-family: $font-primary;
+      font-size: 12px;
+      outline: none;
+      position: relative;
+      transition: top 0.5s ease;
+      top: 0;
+      &:hover {
+        top: -5px;
+      }
+    }
   }
 }
 
@@ -344,6 +362,16 @@ body {
   #list-of-destionations {
     .container {
       width: 95%;
+    }
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  #list-of-destionations {
+    .container {
+      .destination-box {
+        margin: 50px 0;
+      }
     }
   }
 }
